Bugs fixing
