# backend/models/user.go
@@ -9,6 +9,7 @@ type User struct {
 	Name         string          `gorm:"size:53"`
 	Username     string          `gorm:"size:35,unique"`
 	Email        string          `gorm:"size:286,unique"`
+	EmailValid   bool
 	Password     string          `gorm:"size:40"`
 	Phone        string          `gorm:"size:13"`
 	ForceYear    string          `gorm:"size:4"`
