# backend/models/user_temp.go
@@ -9,12 +9,14 @@ type TempUser struct {
 	Name         string              `gorm:"size:53"`
 	Username     string              `gorm:"size:35,unique"`
 	Email        string              `gorm:"size:286,unique"`
+	EmailValid   bool
 	Password     string              `gorm:"size:40"`
 	Phone        string              `gorm:"size:13"`
 	ForceYear    string              `gorm:"size:4"`
 	Job          string              `gorm:"size:35"`
 	JobDesc      string              `gorm:"size:85"`
 	RefreshToken utils.UUID          `gorm:"type:binary(16)"`
+	ConfirmEmailToken   utils.UUID   `gorm:"type:binary(16)"`
 	Address      TempUserAddress     `gorm:"foreignKey:UserId"`
 	Classrooms   []TempUserClassroom `gorm:"foreignKey:UserId"`
 }
